--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,6 +10,26 @@ $color-success: #24C84B;
 $color-warning: #F8B925;
 $color-danger: #F75954;
 $color-info: #909399;
+
+/// color|1|Font Color|2
+$color-text-primary: #303133 !default;
+/// color|1|Font Color|2
+$color-text-regular: #606266 !default;
+/// color|1|Font Color|2
+$color-text-secondary: #909399 !default;
+/// color|1|Font Color|2
+$color-text-placeholder: #C0C4CC !default;
+/// color|1|Border Color|3
+$border-color-base: #DCDFE6 !default;
+/// color|1|Border Color|3
+$border-color-light: #E4E7ED !default;
+/// color|1|Border Color|3
+$border-color-lighter: #EBEEF5 !default;
+/// color|1|Border Color|3
+$border-color-extra-light: #F2F6FC !default;
+/// color|1|Background Color|4
+$background-color-base: #F5F7FA !default;
+
 /* additional */
 $color-sea-blue: rgba(5, 102, 141, 1);
 $color-metallic-seaweed: rgba(2, 128, 144, 1);
